Updated discount logic for promo, buyXgetY and first-time user

--- a/Shopping_Cart/Views/Shared/_Layout.cshtml
+++ b/Shopping_Cart/Views/Shared/_Layout.cshtml
@@ -181,6 +181,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
+                                        <img src="~/images/shop.png" alt="Shop" width="50" />
                         <h3>Shopping Cart</h3>
                     </div>
                     <div class="info">
@@ -205,6 +206,8 @@
                     <!-- Sidebar Menu -->
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" role="menu">
+                           
+
                             <li class="nav-item">
                                 @* <a asp-controller="Product" asp-action="ProductUpload" class="nav-link">
                                     <i class="nav-icon fas fa-box"></i>
