--- a/Shopping_Cart/Views/Product/UserLogin.cshtml
+++ b/Shopping_Cart/Views/Product/UserLogin.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 <section class="vh-50 gradient-custom">
-    <form method="post">
+    <form asp-action="UserLogin" asp-controller="Product" method="post">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -14,33 +14,32 @@
 
                             <div class="mb-md-5 mt-md-4 pb-5">
 
-                                <h2 class="fw-bold mb-2 text-uppercase">User Login</h2>
+                                <h2 class="fw-bold mb-2 text-uppercase">Admin Login</h2>
                                 <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
-                                <div data-mdb-input-init class="form-outline form-white mb-4">
+                                <div class="form-outline form-white mb-4">
                                     <label class="form-label" asp-for="Name"> Name</label>
                                     <input asp-for="Name" class="form-control" placeholder="enter Name " />
-
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
 
-                                <div data-mdb-input-init class="form-outline form-white mb-4">
+                                <div class="form-outline form-white mb-4">
                                     <label class="form-label" asp-for="Password">Password</label>
-                                    <input asp-for="Password" id="typePasswordX" class="form-control " placeholder="enter Password" />
-
+                                    <input asp-for="Password" class="form-control" type="password" placeholder="enter Password" />
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
 
-                                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">@* Forgot password? *@</a></p>
+                                
 
-                                <button type="submit" asp-for="" asp-controller="Product" asp-action="Index" class="btn btn-success">Login</button>
+                                <button type="submit" class="btn btn-success">Login</button>
 
-
+                                @* Show error *@
+                                @if (ViewBag.ErrorMessage != null)
+                                {
+                                    <div class="text-danger mt-3">@ViewBag.ErrorMessage</div>
+                                }
 
                             </div>
-
-
-
 
                         </div>
                     </div>
@@ -49,4 +48,5 @@
         </div>
     </form>
 </section>
+
 
